# x32-osc-api_control

./: README.md
.github/workflows/: docker-publish.yml
osc-bruh/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  swagger.yaml  test_api.py  x32.py  x32_menu.py  x32_rest_api.py  x32_usb_list.py
osc-bruh/.github/workflows/: docker-publish.yml
osc-bruh/x32_osc_api.egg-info/: PKG-INFO  SOURCES.txt
